# MqttPrototype

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  setup.sh
libraries/paho.mqtt.cpp/lib/: libpaho-mqttpp3.so.1.0.0
libraries/paho.mqtt.cpp/src/samples/: ssl_publish.cpp
src/: main.cpp
